--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     height: 100vh;
     width: 100vw;
@@ -12,7 +11,6 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .container {
     width: 30vw;
     display: flex;
@@ -23,7 +21,6 @@ body {
     border: 3px solid black;
     box-shadow: 7px 7px 20px black, -7px -7px 20px black;
 }
-
 .container h1 {
     font-size: 2.5rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -31,7 +28,6 @@ body {
     text-align: center;
     margin: 15px;
 }
-
 .container img {
     margin: auto;
     width: 22vw;
@@ -39,7 +35,6 @@ body {
     display: flex;
     justify-content: center;
 }
-
 .container .button {
     display: flex;
     flex-direction: row;
@@ -47,7 +42,6 @@ body {
     flex-wrap: wrap;
     width: 100%;
 }
-
 .container .btn {
     font-size: 1.5rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -59,15 +53,12 @@ body {
     margin: 25px 5px;
     height: 40px;
 }
-
 .container .button .red {
     background-color: red;
 }
-
 .container .button .blue {
     background-color: blue;
 }
-
 .container .button .light {
     border-radius: 50%;
     padding: 10px;
@@ -75,7 +66,6 @@ body {
     background-color: red;
     margin: 35px 5px;
 }
-
 @keyframes moving {
     from {
         transform: rotate(0deg);
@@ -84,23 +74,18 @@ body {
         transform: rotate(360deg);
     }
 }
-
 .animate1 {
     animation: moving 0.8s linear infinite normal;
 }
-
 .animate2 {
     animation: moving 0.6s linear infinite normal;
 }
-
 .animate3 {
     animation: moving 0.4s linear infinite normal;
 }
-
 .animate4 {
     animation: moving 0.2s linear infinite normal;
 }
-
 @keyframes stopMoving {
     0% {
         transform: rotate(0deg);
@@ -118,7 +103,11 @@ body {
         transform: rotate(360deg);
     }
 }
-
 .animate5 {
     animation: stopMoving 0.7s linear infinite normal;
+}
+@media (max-width:1250px) {
+    .container {
+        width: 90vw;
+    }
 }
