Adding Media Query

--- a/style.css
+++ b/style.css
@@ -106,8 +106,16 @@ body {
 .animate5 {
     animation: stopMoving 0.7s linear infinite normal;
 }
+
 @media (max-width:1250px) {
     .container {
         width: 90vw;
+        height: 65vh;
+    }
+    .container img {
+        width: 75vw;
+    }
+    .container h1 {
+        font-size: 2.4rem;
     }
 }
